--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
         }
 
         #game-board {
-            position: relative;
-            width: 400px;
-            height: 400px;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
-            overflow: hidden;
-        }
+        position: relative;
+        width: 690px; /* 调整宽度为与卡槽相同 */
+        height: 690px; /* 调整高度为与卡槽相同 */
+        border: 2px solid #ccc;
+        border-radius: 10px;
+        background-color: #ffffff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        margin-bottom: 20px;
+        overflow: hidden;
+    }
+
 
         .card {
             position: absolute;
